Added a bootstrap button to page. button is the same color as the background on the page load.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
 
 <div class="container">
-  <div class="quotediv"></div>
+  <div class="quotediv">
+  <button type="button" class="btn btn-primary btn-lg">New Quote</button>
+  </div>
 </div>
 
 </body>
