Added twitter icon. Added link to font-awesome to access that icon. Removed border around button. changed button opacity on hover.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 	<title>Quote Genearator</title>
 	<script type="text/javascript" src="quote.js"></script>
 	<link type="text/css" rel="stylesheet" href="quote.css">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 
 <div class="container">
   <div class="quotediv">
-  <button type="button" class="btn btn-primary btn-lg">New Quote</button>
+  <button type="button" class="btn btn-primary btn-lg">Large</button>
+    <i class="fa fa-twitter" aria-hidden="true"></i>
   </div>
-</div>
+ </div>
 
 </body>
 </html>
