Added method the gets the quote from the api. Quote is generated on button click.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 
 <div class="container">
   <div class="quotediv">
-  <button type="button" class="btn btn-primary btn-lg">Large</button>
-    <i class="fa fa-twitter" aria-hidden="true"></i>
+      <blockquote>
+        <p id="quote"></p>
+        <footer>
+          <a id="author" target="_blank"></a>
+        </footer>
+      </blockquote>
+  <a id ="newQuote" class="btn btn-primary btn-lg">New Quote</a>
+    <i class="fa fa-twitter" area-hidden="true" id = "shareBtn"></i>
   </div>
- </div>
+</div>
 
 </body>
 </html>
