imported a google font. Added a footer for a link to my codepen. Created a footer class.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <i class="fa fa-twitter" area-hidden="true" id = "shareBtn"></i>
   </div>
 </div>
+<div class="footer">By <a href ="http://codepen.io/codyreandeau/" target="_blank">Cody</a></div>
 
 </body>
 </html>
