--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 	<title>Quote Genearator</title>
-	<script type="text/javascript" src="quote.js"></script>
 	<link type="text/css" rel="stylesheet" href="quote.css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="quote.js"></script>
 </head>
 <body>
 
