Added function that allows user to tweet the quote. Made minor css changes.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </footer>
       </blockquote>
   <a id ="newQuote" class="btn btn-primary btn-lg">New Quote</a>
-    <i class="fa fa-twitter" area-hidden="true" id = "shareBtn"></i>
+    <a id="tweet" title="Tweet this quote!" target="_blank"><i class="fa fa-twitter"></i></a>
   </div>
 </div>
 <div class="footer">By <a href ="http://codepen.io/codyreandeau/" target="_blank">Cody</a></div>
